--- a/tom_min_V2/Objects/tom_min.build_log.htm
+++ b/tom_min_V2/Objects/tom_min.build_log.htm
@@ -21,12 +21,45 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.18.0
 Dialog DLL:      TCM.DLL V1.27.0.0
  
 <h2>Project:</h2>
-F:\FreeRTOS_Study\tom_min\tom_min.uvprojx
-Project File Date:  08/25/2019
+Z:\tom_min\git\tom_min188\tom_min_V2\tom_min.uvprojx
+Project File Date:  09/09/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'D:\program files (x86)\keil5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+assembling startup_stm32f10x_hd.s...
+compiling core_cm3.c...
+compiling system_stm32f10x.c...
+compiling misc.c...
+compiling stm32f10x_adc.c...
+compiling stm32f10x_bkp.c...
+compiling stm32f10x_can.c...
+compiling stm32f10x_cec.c...
+compiling stm32f10x_crc.c...
+compiling stm32f10x_dac.c...
+compiling stm32f10x_dbgmcu.c...
+compiling stm32f10x_dma.c...
+compiling stm32f10x_exti.c...
+compiling stm32f10x_flash.c...
+compiling stm32f10x_fsmc.c...
+compiling stm32f10x_gpio.c...
+compiling stm32f10x_i2c.c...
+compiling stm32f10x_iwdg.c...
+compiling stm32f10x_pwr.c...
+compiling stm32f10x_rtc.c...
+compiling stm32f10x_rcc.c...
+compiling stm32f10x_sdio.c...
+compiling stm32f10x_spi.c...
+compiling stm32f10x_tim.c...
+compiling stm32f10x_usart.c...
+compiling stm32f10x_wwdg.c...
+compiling retarget.c...
+compiling Tom_Common_Api.c...
+.\User\include\Tom_Common_Api.h(17): warning:  #1-D: last line of file ends without a newline
+  #endif
+User\source\Tom_Common_Api.c(43): warning:  #1-D: last line of file ends without a newline
+  }
+User\source\Tom_Common_Api.c: 2 warnings, 0 errors
 compiling main.c...
 .\User\include\Tom_Common_Api.h(17): warning:  #1-D: last line of file ends without a newline
   #endif
@@ -41,17 +74,28 @@ main\main.c(385): warning:  #177-D: variable "flag"  was declared but never refe
 main\main.c(33): warning:  #177-D: variable "fac_ms"  was declared but never referenced
   static u16 fac_ms=0;//ms—” ±±∂≥À ˝
 main\main.c: 6 warnings, 0 errors
+compiling stm32f10x_it.c...
+compiling list.c...
+compiling timers.c...
+compiling queue.c...
+compiling tasks.c...
+compiling heap_2.c...
+compiling port.c...
+compiling stm3210e_eval.c...
+compiling stm32_eval_sdio_sd.c...
+compiling diskio.c...
+compiling ff.c...
 linking...
 Program Size: Code=24356 RO-data=424 RW-data=236 ZI-data=21820  
 FromELF: creating hex file...
-".\Objects\tom_min.axf" - 0 Error(s), 6 Warning(s).
+".\Objects\tom_min.axf" - 0 Error(s), 8 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_Target_1
-  D:\program files (x86)\keil5\ARM\PACK\Keil\STM32F1xx_DFP\2.1.0\Device\Include
+  D:\program files (x86)\keil5\ARM\PACK\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:50
 </pre>
 </body>
 </html>
